--- a/rubis/pubspec.yaml
+++ b/rubis/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   flutter_secure_storage: ^5.0.2
   dropdown_button2: ^1.2.2
+  shaky_animated_listview: ^0.0.5
   
 
 dev_dependencies:
